Estilizando cores, fontes e propriedades de texto

--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - Primeiros passos em CSS/introducao.html
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/2 - Primeiros passos em CSS/introducao.html
@@ -6,14 +6,39 @@
     <style>
         h1 {
             font-size: 65px;
+            font-family: sans-serif;
             color: orange;
+            text-decoration: underline;
         }
         ul {
-            background-color: teal;
+            text-align: center;
+            line-height: 50px;
         }
 
         .tag {
+            background-color: green;
+        }
+        
+        p {
+            font-weight: 600;
+            font-size: 3em;
+            font-style: italic;
+        }
+
+        body {
+            font-size: 16px;
+        }
+
+        #yellow {
+            background-color: yellow;
+        }
+
+        #red {
             background-color: red;
+        }
+
+        #brown {
+            background-color: brown;
         }
 
     </style>
@@ -21,10 +46,10 @@
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="tag">Qual é a sua cor favorita?</p>
-    <ul class="tag">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+    <ul>
+      <li id="yellow">Amarelo</li>
+      <li id="red">Vermelho</li>
+      <li id="brown">Marrom</li>
     </ul>
   </body>
 </html>
