--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/3 - Seletores e posicionamento/index.html
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/3 - Seletores e posicionamento/index.html
@@ -2,17 +2,26 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>Posicionamento de elementos</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Agrupando Seletores</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Exercícios de fixação 3.3</h1>
-    <img id="mario" src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
-    <img id="goomba" src="https://bit.ly/3arGfMc" alt="goomba" class="goomba" />
-    <img id="bowser" src="https://bit.ly/3AVnjks" alt="bowser" class="bowser" />
-    <p class="speach">
-      Goomba, do something!
+    <h1>Lista dos Melhores Sites que já vi</h1>
+        <ol>
+            <li>50/50</li>
+            <li>A Procura da Felicidade</li>
+            <li>Patch Adams</li>
+        </ol>
+    <p>
+        Top 3 dos melhores sites que existem na web
     </p>
-    <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
+    <p>
+        Principais motivos para eu gostar deles
+    </p>
+    <ul>
+        <li>Proporciona reflexões</li>
+        <li>Cômicos</li>
+        <li>Boa atuação</li>
+    </ul>
   </body>
 </html>
