--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/3 - Seletores e posicionamento/index.html
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/3 - Seletores e posicionamento/index.html
@@ -1,27 +1,80 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <title>Pseudoclasses</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Paleta de Cores</h1>
-  <p>Vamos criar uma paleta de cores com as divs abaixo:</p>
-  <div>
-    <h3>Cor primária</h3>
-  </div>
-  <div>
-    <h3>Cor Secundária</h3>
-  </div>
-  <div>
-    <h3>Cor Complementar</h3>
-  </div>
-  <div>
-    <h3>Cor Escura</h3>
-  </div>
-  <div>
-    <h3>Cor Clara</h3>
-  </div>
-</body>
+<html lang="pt">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ranking</title>
+    <style>
+      h1 {
+        text-align: center;
+      }
+
+      .first {
+        background-color: rgb(235, 200, 84);
+        font-size: 20px;
+        height: 50px;
+        text-align: center;
+        width: 200px;
+        margin:auto;
+        display: inline-block;
+      }
+
+      .second {
+        background-color: rgb(219, 219, 219);
+        font-size: 20px;
+        height: 50px;
+        text-align: center;
+        width: 300px;
+        display: inline-block;
+      }
+
+      .third {
+        background-color: rgb(170, 142, 106);
+        font-size: 20px;
+        height: 50px;
+        text-align: center;
+        width: 300px;
+        display: inline-block;
+      }
+
+      .header {
+        text-align: center;
+      }
+
+      .premiacao li {
+        display: inline; 
+        margin: auto;       
+      }
+
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Hackathon Results</h1>
+    </header>
+    <section>
+      <ul class="podio">
+        <li class="first">1º - Equipe 1</li>
+        <li class="second">2º - Equipe 2</li>
+        <li class="third">3º - Equipe 3</li>
+      </ul>
+    </section>
+    <section>
+      <h3 class="header">Premiação Primeiro Lugar:</h3>
+      <ul class="premiacao">
+        <li>| R$ 1000,00 por integrante da equipe |</li>
+        <li>| Bootcamp de 2 meses com possibilidade de contratação |</li>
+      </ul>
+      <h3 class="header">Premiação Segundo Lugar:</h3>
+      <ul class="premiacao">
+        <li>| R$ 600,00 por integrante da equipe |</li>
+        <li>| Participação no processo seletivo para o Bootcamp |</li>
+      </ul>
+      <h3 class="header">Premiação Terceiro Lugar:</h3>
+      <ul class="premiacao">
+        <li>| R$ 300,00 por integrante da equipe |</li>
+        <li>| Participação no processo seletivo para o Bootcamp |</li>
+      </ul>
+    </section>
+  </body>
 </html>
