Teste de legend e fieldset

--- a/1 - Fundamentos/6 - HTML e CSS: Forms, Flexbox e Responsivo/1 - HTML & CSS - Forms/forms.html
+++ b/1 - Fundamentos/6 - HTML e CSS: Forms, Flexbox e Responsivo/1 - HTML & CSS - Forms/forms.html
@@ -12,6 +12,24 @@
         <input type="password" name="login" id="senha" placeholder="Digite sua senha" required>
         <input type="checkbox" name="login" id="check">Lembre-me
         <button>Entrar</button>
+        <br>
+        <br>
+        <a href="www.betrybe.com.br" target="_blank" id="href">TRYBE</a>
+        <input type="text" id="input-text"/>
+        <input type="checkbox" id="input-checkbox"/>
+        <br>
+        <br>
+        <br>
+        <fieldset>
+            <p>Teste do p</p>
+            <legend>Teste do legend</legend>
+            <label for="a">A : </label>
+            <input type="text" name="campo">
+            <br/>
+            <label for="senha">B: </label>
+            <input type="text" name="campo2">
+        </fieldset>
     </form>
+    <script src="script.js"></script>
 </body>
 </html>
